--- a/Test.html
+++ b/Test.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jonathan Wayne - Education</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Education • Jonathan Wayne Snodgrass</title>
   <style>
-    /* ===== Base: mirrors index.html ===== */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Roboto', sans-serif; line-height: 1.6; background: #0d1117; color: #c9d1d9; }
+    /* ===== minimalist dark theme to mirror your index.html look ===== */
+    :root { --bg:#0b0d10; --text:#e7eef6; --muted:#a9b5c4; --accent:#8bd3ff; --chip:#0f141a; --chipBorder:#223142; }
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; background: var(--bg); color: var(--text); }
 
-    header { background: #161b22; padding: 2rem; text-align: center; }
-    header h1 { font-size: 2.5rem; }
-    header p { font-size: 1.2rem; color: #8b949e; }
+    /* header / footer consistent with home */
+    header, footer { max-width: 900px; margin: 0 auto; padding: 24px 16px; }
+    main { max-width: 900px; margin: 0 auto; padding: 16px; }
+    h1 { margin: 0 0 6px; font-size: clamp(24px, 4vw, 36px); font-weight: 700; }
+    .tagline { color: var(--muted); margin: 0 0 12px; }
 
-    nav { background: #161b22; padding: 1rem; text-align: center; }
-    nav a { color: #58a6ff; margin: 0 1rem; text-decoration: none; font-weight: 500; }
-    nav a:hover { text-decoration: underline; }
+    /* nav: plain inline links like your home page */
+    nav { display: flex; gap: 12px; margin-bottom: 6px; }
+    nav a { color: var(--accent); text-decoration: none; padding: 2px 0; }
+    nav a[aria-current="page"] { text-decoration: underline; }
 
-    main { max-width: 900px; margin: 2rem auto; padding: 1rem; }
+    .crumb { color: var(--muted); font-size: 14px; margin: 10px 0 8px; }
+    h2 { margin: 6px 0 8px; font-size: 22px; }
+    .intro { color: var(--muted); margin: 6px 0 16px; }
 
-    h2 { border-bottom: 2px solid #30363d; padding-bottom: 0.5rem; margin-bottom: 1rem; color: #58a6ff; }
-    .crumb { color: #8b949e; margin-bottom: .5rem; }
-    .intro { color: #8b949e; margin-bottom: 1rem; }
+    /* filters: unobtrusive, rounded like simple chips */
+    .filters { display: flex; gap: 8px; flex-wrap: wrap; margin: 12px 0 16px; }
+    .filters input, .filters select { background: var(--chip); color: var(--text); border: 1px solid var(--chipBorder); border-radius: 9999px; padding: 8px 14px; outline: none; }
 
-    /* ===== Filters ===== */
-    .filters { display: flex; flex-wrap: wrap; gap: .5rem; margin: 1rem 0 1.25rem; }
-    .filters input,
-    .filters select { background: #21262d; color: #c9d1d9; border: 1px solid #30363d; border-radius: 5px; padding: .5rem .75rem; }
-
-    /* ===== Responsive grid of bubbles ===== */
-    .list { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: .75rem; align-items: start; }
-
-    /* Each bubble+panel lives in one grid item. When opened, the item spans all columns to prevent sizing jitter in neighbors. */
-    .row { display: block; }
-    .row.open { grid-column: 1 / -1; }
-
-    .bubble { background: #21262d; border: 1px solid #30363d; border-radius: 9999px; padding: .65rem 1rem; display: inline-flex; align-items: center; gap: .6rem; cursor: pointer; width: 100%; text-align: left; color: #ffffff; }
-    .bubble:hover { background: #242b33; }
-    .code { font-weight: 700; color: #ffffff; }
-    .caret { width: 0; height: 0; border-left: 6px solid #58a6ff; border-top: 6px solid transparent; border-bottom: 6px solid transparent; transition: transform .15s ease; }
+    /* bubble chips (flat, no glow/shadow, to match your minimalist style) */
+    .list { display: grid; gap: 10px; }
+    .row { display: grid; grid-template-columns: 1fr; gap: 6px; }
+    .bubble { display: inline-flex; align-items: center; gap: 10px; border: 1px solid var(--chipBorder); background: var(--chip); color: var(--text); border-radius: 9999px; padding: 10px 14px; cursor: pointer; user-select: none; }
+    .bubble:focus-visible { outline: 2px solid var(--accent); outline-offset: 2px; }
+    .code { font-weight: 700; letter-spacing: .2px; color: #cfe6ff; }
+    .caret { width: 0; height: 0; border-left: 6px solid var(--accent); border-top: 6px solid transparent; border-bottom: 6px solid transparent; transition: transform .12s ease; }
     .bubble[aria-expanded="true"] .caret { transform: rotate(90deg); }
 
-    .panel { display: none; padding: .65rem 1rem .85rem 1rem; margin-left: 1rem; border-left: 2px dashed #30363d; color: #c9d1d9; }
+    /* description panel: simple, no box-shadows; spacing matches home */
+    .panel { display: none; padding-left: 18px; border-left: 2px dashed var(--chipBorder); color: var(--muted); line-height: 1.55; }
     .panel.open { display: block; }
 
-    footer { text-align: center; padding: 2rem; color: #8b949e; font-size: .9rem; }
+    .meta { color: var(--muted); font-size: 12.5px; }
+
+    @media (min-width: 760px) {
+      .list { grid-template-columns: 1fr 1fr; }
+    }
+    @media (min-width: 1040px) {
+      .list { grid-template-columns: 1fr 1fr 1fr; }
+    }
   </style>
 </head>
 <body>
@@ -62,7 +67,7 @@
   <main>
     <div class="crumb">Portfolio / Education</div>
     <h2>Completed Courses @ Fayetteville Tech</h2>
-    <p class="intro">Click a bubble to reveal the course description. If there isn't an official text available, you'll see <strong>N/A</strong>.</p>
+    <p class="intro">Click a bubble to reveal the course description. If FTCC doesn’t list one, you’ll see <strong>N/A</strong>.</p>
 
     <div class="filters">
       <input id="q" type="search" placeholder="Search title or code…" aria-label="Search courses" />
@@ -125,14 +130,15 @@
       { code: "SGD-289", title: "Game Production I", subject: "Game Development", desc: "" },
     ];
 
-    const list = document.getElementById('list');
-    const q = document.getElementById('q');
-    const subject = document.getElementById('subject');
-    const sort = document.getElementById('sort');
+    const $ = (s, el=document) => el.querySelector(s);
+    const list = $('#list');
+    const q = $('#q');
+    const subject = $('#subject');
+    const sort = $('#sort');
 
     function bubble(c){
-      const row = document.createElement('div');
-      row.className = 'row';
+      const wrapper = document.createElement('div');
+      wrapper.className = 'row';
 
       const btn = document.createElement('button');
       btn.type = 'button';
@@ -150,13 +156,12 @@
         const next = btn.getAttribute('aria-expanded') === 'false';
         btn.setAttribute('aria-expanded', String(next));
         panel.classList.toggle('open', next);
-        row.classList.toggle('open', next); // span row full-width to avoid layout jitter
       };
       btn.addEventListener('click', toggle);
-      btn.addEventListener('keydown', (e)=>{ if(e.key==='Enter'||e.key===' '){ e.preventDefault(); toggle(); }});
+      btn.addEventListener('keydown', (e)=>{ if(e.key === 'Enter' || e.key === ' '){ e.preventDefault(); toggle(); }});
 
-      row.append(btn, panel);
-      return row;
+      wrapper.append(btn, panel);
+      return wrapper;
     }
 
     function render(){
