--- a/Test.html
+++ b/Test.html
@@ -33,7 +33,7 @@
     /* bubble chips (flat, no glow/shadow, to match your minimalist style) */
     .list { display: grid; gap: 10px; }
     .row { display: grid; grid-template-columns: 1fr; gap: 6px; }
-    .bubble { display: inline-flex; align-items: center; gap: 10px; border: 1px solid var(--chipBorder); background: var(--chip); color: var(--text); border-radius: 9999px; padding: 10px 14px; cursor: pointer; user-select: none; }
+    .bubble { display: inline-flex; align-items: center; gap: 10px; border: 1px solid var(--chipBorder); background: var(--chip); color: #ffffff; border-radius: 9999px; padding: 10px 14px; cursor: pointer; user-select: none; }
     .bubble:focus-visible { outline: 2px solid var(--accent); outline-offset: 2px; }
     .code { font-weight: 700; letter-spacing: .2px; color: #cfe6ff; }
     .caret { width: 0; height: 0; border-left: 6px solid var(--accent); border-top: 6px solid transparent; border-bottom: 6px solid transparent; transition: transform .12s ease; }
