--- a/Test.html
+++ b/Test.html
@@ -6,7 +6,7 @@
   <title>Jonathan Wayne - Education</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
-    /* === Base: mirror index.html === */
+    /* === Mirror index.html look === */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Roboto', sans-serif; line-height: 1.6; background: #0d1117; color: #c9d1d9; }
 
@@ -23,32 +23,28 @@
     .crumb { color: #8b949e; margin-bottom: .5rem; }
     .intro { color: #8b949e; margin-bottom: 1rem; }
 
-    /* Filters */
-    .filters { display: flex; flex-wrap: wrap; gap: .5rem; margin: 1rem 0 1.25rem; }
-    .filters input,
-    .filters select { background: #21262d; color: #c9d1d9; border: 1px solid #30363d; border-radius: 5px; padding: .5rem .75rem; }
-
-    /* Bubble list */
+    /* Bubbles list (no JS needed) */
     .list { display: grid; grid-template-columns: 1fr; gap: .75rem; }
     @media (min-width: 760px){ .list { grid-template-columns: 1fr 1fr; } }
     @media (min-width: 1060px){ .list { grid-template-columns: 1fr 1fr 1fr; } }
 
-    .item { display: block; }
-    .bubble {
+    details { background: transparent; border: none; }
+    summary {
       background: #21262d;
       border: 1px solid #30363d;
       border-radius: 9999px;
       padding: .65rem 1rem;
+      list-style: none;
+      cursor: pointer;
       display: inline-flex;
       align-items: center;
       gap: .6rem;
-      cursor: pointer;
-      width: 100%;
-      text-align: left;
-      color: #ffffff;             /* bubble text pure white */
+      color: #ffffff;                 /* pure white bubble text */
     }
-    .bubble:hover { background: #242b33; }
-    .code { font-weight: 700; color: #ffffff; }  /* course code also pure white */
+    summary:hover { background: #242b33; }
+    summary::-webkit-details-marker { display: none; }
+    summary::marker { content: ""; }
+
     .caret {
       width: 0; height: 0;
       border-left: 6px solid #58a6ff;
@@ -56,15 +52,179 @@
       border-bottom: 6px solid transparent;
       transition: transform .15s ease;
     }
-    .bubble[aria-expanded="true"] .caret { transform: rotate(90deg); }
+    details[open] .caret { transform: rotate(90deg); }
+
+    .code { font-weight: 700; color: #ffffff; } /* code also white */
 
     .panel {
-      display: none;
       padding: .65rem 1rem .85rem 1rem;
       margin-left: 1rem;
       border-left: 2px dashed #30363d;
       color: #c9d1d9;
     }
-    .panel.open { display: block; }
 
-    footer { text-align: center; padding:
+    footer { text-align: center; padding: 2rem; color: #8b949e; font-size: .9rem; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Jonathan Wayne Snodgrass</h1>
+    <p class="tagline">Game Design & Cybersecurity Student</p>
+    <nav>
+      <a href="/index.html">Home</a>
+      <a href="/Projects.html">Projects</a>
+      <a href="/Education.html" aria-current="page">Education</a>
+    </nav>
+  </header>
+
+  <main>
+    <div class="crumb">Portfolio / Education</div>
+    <h2>Completed Courses @ Fayetteville Tech</h2>
+    <p class="intro">Click a bubble to reveal the course description. If there isn't official text available, you'll see <strong>N/A</strong>.</p>
+
+    <div class="list" aria-live="polite">
+      <!-- Cybersecurity / Networking / CS -->
+      <details>
+        <summary><span class="caret" aria-hidden="true"></span><span class="code">SEC-110</span> Security Concepts</summary>
+        <div class="panel">This course introduces the concepts and issues related to securing information systems and the development of policies to implement information security.</div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">NOS-120</span> Linux/UNIX Single User</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">NOS-110</span> Operating Systems Concepts</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">NET-126</span> Routing Basics</summary>
+        <div class="panel">This course introduces students to the networking field, including terminology and protocols, LANs, WANs, and related technologies.</div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">CTI-110</span> Web, Programming, &amp; DB Foundation</summary>
+        <div class="panel">This course covers the introduction of the tools and resources available to students in programming, mark-up, and database foundations.</div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">CTI-120</span> Network &amp; Sec Foundation</summary>
+        <div class="panel">Introduces fundamental networking and security concepts as part of the Computer Technology Integration foundations.</div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">CTS-115</span> Information Systems Business Concepts</summary>
+        <div class="panel">Introduces the role of IT in managing business processes and the need for business process and IT alignment.</div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">CIS-115</span> Intro to Programming &amp; Logic</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <!-- Communications / English / Math / Gov / Academic Success -->
+      <details>
+        <summary><span class="caret"></span><span class="code">COM-120</span> Intro to Interpersonal Communication</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">ENG-111</span> Writing and Inquiry</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">MAT-110</span> Math Measurement &amp; Literacy</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">POL-120</span> American Government</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">ACA-120</span> College Transfer Success</summary>
+        <div class="panel">Provides the information and strategies necessary to develop clear personal, academic, and professional goals.</div>
+      </details>
+
+      <!-- Digital Media / Game Dev -->
+      <details>
+        <summary><span class="caret"></span><span class="code">DME-120</span> Intro to Multimedia Applications</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">DME-130</span> Digital Animation I</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-111</span> Introduction to Simulation and Game Development</summary>
+        <div class="panel">Provides an introduction to simulation and game development.</div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-112</span> 3D Modeling II</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-114</span> 3D Modeling I</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-116</span> Animation I</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-158</span> Simulation and Game Design Tools</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-162</span> 3D Character Modeling</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-163</span> Game Level Design I</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-172</span> 3D Rendering</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-180</span> Game Design I</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-212</span> Game Design II</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-237</span> Game Character Design</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+
+      <details>
+        <summary><span class="caret"></span><span class="code">SGD-289</span> Game Production I</summary>
+        <div class="panel"><em>N/A</em></div>
+      </details>
+    </div>
+  </main>
+
+  <footer>
+    <small>© 2025 Jonathan Wayne Snodgrass | jonathanwayne.dev</small>
+  </footer>
+</body>
+</html>
