--- a/Education.html
+++ b/Education.html
@@ -10,23 +10,13 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Roboto', sans-serif; line-height: 1.6; background: #0d1117; color: #c9d1d9; }
 
-    /* Header + Nav spacing to match Home */
-  header{
-    background:#161b22;
-    text-align:center;
-    padding: 2rem 1rem 0;     /* tighter top, no extra bottom padding */
-    }
-  header h1{ font-size:2.5rem; margin:0 0 .25rem; }
-  header p{ font-size:1.2rem; color:#8b949e; margin:0; }
+    header { background: #161b22; padding: 2rem; text-align: center; }
+    header h1 { font-size: 2.5rem; }
+    header p { font-size: 1.2rem; color: #8b949e; }
 
-    /* Nav sits lower like Home */
-  nav{
-    background:#161b22;
-    margin-top: 1rem;         /* push nav down from tagline */
-    padding: .5rem 0 1rem;    /* same vertical rhythm */
-    text-align:center;
-    box-shadow: inset 0 -1px 0 #30363d;  /* subtle bottom divider like Home */
-    }
+    nav { background: #161b22; padding: 1rem; text-align: center; }
+    nav a { color: #58a6ff; margin: 0 1rem; text-decoration: none; font-weight: 500; }
+    nav a:hover { text-decoration: underline; }
 
     main { max-width: 900px; margin: 2rem auto; padding: 1rem; }
     h2 { border-bottom: 2px solid #30363d; padding-bottom: 0.5rem; margin-bottom: 1rem; color: #58a6ff; }
