--- a/Education.html
+++ b/Education.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jonathan Wayne - Education</title>
+  <title>Jonathan Wayne - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
-    /* Base — mirrors your index.html */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Roboto', sans-serif; line-height: 1.6; background: #0d1117; color: #c9d1d9; }
-
     header { background: #161b22; padding: 2rem; text-align: center; }
     header h1 { font-size: 2.5rem; }
     header p { font-size: 1.2rem; color: #8b949e; }
