Update completed courses and add new course details
Updated completed courses count and added new courses in Cybersecurity, Networking, and Social/Behavioral Science.

--- a/Education.html
+++ b/Education.html
@@ -182,7 +182,7 @@
       <summary class="school-summary">
         <span class="school-caret" aria-hidden="true"></span>
         <span class="school-title">Fayetteville Technical Community College</span>
-        <span class="school-meta">• 27 completed courses across Cybersecurity, Networking, CS, Digital Media, and Game Development</span>
+        <span class="school-meta">• 31 completed courses across Cybersecurity, Networking, CS, Digital Media, and Game Development</span>
       </summary>
 
       <div class="school-panel">
@@ -199,6 +199,17 @@
             <div class="panel"><div class="panel-title">SEC-110 · Security Concepts</div>This course introduces the concepts and issues related to securing information systems and the development of policies to implement information security.</div>
           </details>
 
+          <!-- Newly completed: SEC-175 -->
+          <details class="course">
+            <summary class="course-summary" title="SEC-175 · Perimeter Defense">
+              <span class="course-caret"></span>
+              <span class="code">SEC-175</span>
+              <span class="title">Perimeter Defense</span>
+              <span class="pico cy" aria-label="Cybersecurity" title="Cybersecurity"><svg><use href="#i-lock"/></svg></span>
+            </summary>
+            <div class="panel"><div class="panel-title">SEC-175 · Perimeter Defense</div><em>N/A</em></div>
+          </details>
+
           <!-- Networking -->
           <details class="course">
             <summary class="course-summary" title="NET-126 · Routing Basics">
@@ -210,27 +221,7 @@
             <div class="panel"><div class="panel-title">NET-126 · Routing Basics</div>This course introduces students to the networking field, including terminology and protocols, LANs, WANs, and related technologies.</div>
           </details>
 
-          <details class="course">
-            <summary class="course-summary" title="NOS-120 · Linux/UNIX Single User">
-              <span class="course-caret"></span>
-              <span class="code">NOS-120</span>
-              <span class="title">Linux/UNIX Single User</span>
-              <span class="pico nw" aria-label="Networking" title="Networking"><svg><use href="#i-network"/></svg></span>
-            </summary>
-            <div class="panel"><div class="panel-title">NOS-120 · Linux/UNIX Single User</div><em>N/A</em></div>
-          </details>
-
-          <details class="course">
-            <summary class="course-summary" title="NOS-110 · Operating Systems Concepts">
-              <span class="course-caret"></span>
-              <span class="code">NOS-110</span>
-              <span class="title">Operating Systems Concepts</span>
-              <span class="pico nw" aria-label="Networking" title="Networking"><svg><use href="#i-network"/></svg></span>
-            </summary>
-            <div class="panel"><div class="panel-title">NOS-110 · Operating Systems Concepts</div><em>N/A</em></div>
-          </details>
-
-          <!-- Computer Science -->
+          <!-- CS -->
           <details class="course">
             <summary class="course-summary" title="CTI-110 · Web, Programming, & DB Foundation">
               <span class="course-caret"></span>
@@ -269,6 +260,49 @@
               <span class="pico cs" aria-label="Computer Science" title="Computer Science"><svg><use href="#i-code"/></svg></span>
             </summary>
             <div class="panel"><div class="panel-title">CIS-115 · Intro to Programming &amp; Logic</div><em>N/A</em></div>
+          </details>
+
+          <!-- Newly completed: SEC-210 -->
+          <details class="course">
+            <summary class="course-summary" title="SEC-210 · Intrusion Detection">
+              <span class="course-caret"></span>
+              <span class="code">SEC-210</span>
+              <span class="title">Intrusion Detection</span>
+              <span class="pico cy" aria-label="Cybersecurity" title="Cybersecurity"><svg><use href="#i-lock"/></svg></span>
+            </summary>
+            <div class="panel"><div class="panel-title">SEC-210 · Intrusion Detection</div><em>N/A</em></div>
+          </details>
+
+          <!-- Newly completed: CCT-240 -->
+          <details class="course">
+            <summary class="course-summary" title="CCT-240 · Data Recovery Techniques">
+              <span class="course-caret"></span>
+              <span class="code">CCT-240</span>
+              <span class="title">Data Recovery Techniques</span>
+              <span class="pico cy" aria-label="Cybersecurity" title="Cybersecurity"><svg><use href="#i-lock"/></svg></span>
+            </summary>
+            <div class="panel"><div class="panel-title">CCT-240 · Data Recovery Techniques</div><em>N/A</em></div>
+          </details>
+
+          <!-- Networking continued -->
+          <details class="course">
+            <summary class="course-summary" title="NOS-120 · Linux/UNIX Single User">
+              <span class="course-caret"></span>
+              <span class="code">NOS-120</span>
+              <span class="title">Linux/UNIX Single User</span>
+              <span class="pico nw" aria-label="Networking" title="Networking"><svg><use href="#i-network"/></svg></span>
+            </summary>
+            <div class="panel"><div class="panel-title">NOS-120 · Linux/UNIX Single User</div><em>N/A</em></div>
+          </details>
+
+          <details class="course">
+            <summary class="course-summary" title="NOS-110 · Operating Systems Concepts">
+              <span class="course-caret"></span>
+              <span class="code">NOS-110</span>
+              <span class="title">Operating Systems Concepts</span>
+              <span class="pico nw" aria-label="Networking" title="Networking"><svg><use href="#i-network"/></svg></span>
+            </summary>
+            <div class="panel"><div class="panel-title">NOS-110 · Operating Systems Concepts</div><em>N/A</em></div>
           </details>
 
           <!-- Communications / English / Math / Gov / Academic Success -->
@@ -320,6 +354,17 @@
               <span class="pico as" aria-label="Academic Success" title="Academic Success"><svg><use href="#i-cap"/></svg></span>
             </summary>
             <div class="panel"><div class="panel-title">ACA-120 · College Transfer Success</div>Provides the information and strategies necessary to develop clear personal, academic, and professional goals.</div>
+          </details>
+
+          <!-- Newly completed: SOC-210 -->
+          <details class="course">
+            <summary class="course-summary" title="SOC-210 · Introduction to Sociology">
+              <span class="course-caret"></span>
+              <span class="code">SOC-210</span>
+              <span class="title">Introduction to Sociology</span>
+              <span class="pico en" aria-label="Social/Behavioral Science" title="Social/Behavioral Science"><svg><use href="#i-book"/></svg></span>
+            </summary>
+            <div class="panel"><div class="panel-title">SOC-210 · Introduction to Sociology</div><em>N/A</em></div>
           </details>
 
           <!-- Digital Media / Game Dev -->
