Simplify intro text in Education section
Removed introductory text about expanding the school view.

--- a/Education.html
+++ b/Education.html
@@ -175,7 +175,7 @@
   <main>
     <div class="crumb">Portfolio / Education</div>
     <h2>Education</h2>
-    <p class="intro">Expand the school to view completed classes. Click a class to read its description. Where there isn’t official text, you’ll see <strong>N/A</strong>.</p>
+    <p class="intro">Click a class to read its description. Where there isn’t official text, you’ll see <strong>N/A</strong>.</p>
 
     <!-- SCHOOL -->
     <details class="school" open>
