--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
+    <a href="/">Home</a>
     <a href="Projects.html">Projects</a>
     <a href="Education.html">Education</a>
   </nav>
