Revise introduction and skills in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Hi, I'm Jonathan — a college student studying game design and cybersecurity. I'm passionate about creating immersive digital experiences and building secure systems. 
+    <p>Hello, I'm Jonathan Wayne Snodgrass — a college student studying game design and cybersecurity. I'm passionate about creating immersive digital experiences and building secure systems. 
       I love working on projects that challenge my creativity and problem-solving skills.</p>
   </section>
 
@@ -53,7 +53,8 @@
       <li>HTML/CSS</li>
       <li>JavaScript</li>
       <li>Python</li>
-      <li>Linux Administrator</li>
+      <li>Linux</li>
+      <li>Windows</li>
       <li>Wireshark</li>
       <li>Git/GitHub</li>
     </ul>
