--- a/Education.html
+++ b/Education.html
@@ -167,7 +167,7 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
+    <a href="/">Home</a>
     <a href="Projects.html">Projects</a>
     <a href="Education.html" aria-current="page">Education</a>
   </nav>
