--- a/Education.html
+++ b/Education.html
@@ -14,7 +14,7 @@
     header h1 { font-size:2.5rem; }
     header p { font-size:1.2rem; color:#8b949e; }
 
-    /* Nav = separate bar just like Home */
+    /* Nav like Home */
     nav { background:#161b22; padding:1rem; text-align:center; }
     nav a { color:#58a6ff; margin:0 1rem; text-decoration:none; font-weight:500; }
     nav a:hover { text-decoration:underline; }
@@ -24,7 +24,7 @@
     .crumb { color:#8b949e; margin-bottom:.5rem; }
     .intro { color:#8b949e; margin-bottom:1rem; }
 
-    /* Generic details + caret */
+    /* details / summary base */
     details { background:#21262d; border:1px solid #30363d; border-radius:8px; }
     summary { list-style:none; cursor:pointer; }
     summary::-webkit-details-marker { display:none; }
@@ -33,81 +33,54 @@
     .caret { width:0; height:0; border-left:8px solid #58a6ff; border-top:8px solid transparent; border-bottom:8px solid transparent; transition:transform .15s ease; }
     details[open] > summary .caret { transform:rotate(90deg); }
 
-    /* Pictogram */
+    /* pictograms */
     .pico { width:34px; height:34px; border-radius:50%; display:inline-flex; align-items:center; justify-content:center; background:#161b22; border:1px solid #30363d; }
     .pico svg { width:20px; height:20px; stroke:#58a6ff; }
-    .pico.cy svg { stroke:#58a6ff; } /* Cybersecurity – blue */
-    .pico.nw svg { stroke:#7ee787; } /* Networking – green */
-    .pico.cs svg { stroke:#d2a8ff; } /* Computer Science – purple */
-    .pico.cm svg { stroke:#79c0ff; } /* Communications – light blue */
-    .pico.en svg { stroke:#f2cc60; } /* English – yellow */
-    .pico.ma svg { stroke:#ffa657; } /* Mathematics – orange */
-    .pico.ps svg { stroke:#ff7b72; } /* Political Science – coral */
-    .pico.as svg { stroke:#8b949e; } /* Academic Success – gray */
-    .pico.dm svg { stroke:#56d4b7; } /* Digital Media – teal */
-    .pico.gd svg { stroke:#a5d6ff; } /* Game Dev – icy blue */
+    .pico.cy svg { stroke:#58a6ff; } /* Cybersecurity */
+    .pico.nw svg { stroke:#7ee787; } /* Networking */
+    .pico.cs svg { stroke:#d2a8ff; } /* Comp Sci */
+    .pico.cm svg { stroke:#79c0ff; } /* Comms */
+    .pico.en svg { stroke:#f2cc60; } /* English / S/B */
+    .pico.ma svg { stroke:#ffa657; } /* Math */
+    .pico.ps svg { stroke:#ff7b72; } /* Political Science */
+    .pico.as svg { stroke:#8b949e; } /* Academic Success */
+    .pico.dm svg { stroke:#56d4b7; } /* Digital Media */
+    .pico.gd svg { stroke:#a5d6ff; } /* Game Dev */
 
-    /* SCHOOL level */
+    /* SCHOOL */
     details.school { background:transparent; border:none; }
-    summary.school-summary {
-      background:#21262d; border:1px solid #30363d; border-radius:6px;
-      padding:1rem; display:flex; align-items:center; gap:.8rem; color:#fff;
-    }
+    summary.school-summary { background:#21262d; border:1px solid #30363d; border-radius:6px; padding:1rem; display:flex; align-items:center; gap:.8rem; color:#fff; }
     .school-title { font-weight:700; }
     .school-meta { color:#8b949e; font-size:.9rem; }
+    .school-panel { background:#21262d; border:1px solid #30363d; border-top:0; border-radius:0 0 6px 6px; padding:1rem; margin-top:-1px; overflow:hidden; }
 
-    .school-panel {
-      background:#21262d; border:1px solid #30363d; border-top:0;
-      border-radius:0 0 6px 6px; padding:1rem; margin-top:-1px; overflow:hidden;
-    }
-
-    /* CATEGORY level */
+    /* CATEGORIES */
     .category-grid { display:grid; grid-template-columns:1fr; gap:1rem; }
     @media (min-width:720px){ .category-grid { grid-template-columns:1fr 1fr; } }
-
     details.category { background:#21262d; border:1px solid #30363d; border-radius:8px; }
-    summary.category-summary {
-      padding: .9rem 1rem;
-      display:grid; grid-template-columns:auto auto 1fr; align-items:center; gap:.75rem; color:#fff;
-      border-radius:8px;
-    }
+    summary.category-summary { padding:.9rem 1rem; display:grid; grid-template-columns:auto auto 1fr; align-items:center; gap:.75rem; color:#fff; border-radius:8px; }
     .cat-title { font-weight:700; }
     .cat-sub { color:#8b949e; font-size:.9rem; }
-
     .category-panel { border-top:1px solid #30363d; padding:1rem; }
 
-    /* COURSE level */
+    /* COURSES */
     .course-list { display:grid; grid-template-columns:1fr; gap:.75rem; }
     @media (min-width:720px){ .course-list { grid-template-columns:1fr 1fr; } } /* two per row */
     details.course { background:#21262d; border:1px solid #30363d; border-radius:8px; }
-
     summary.course-summary {
       padding:.8rem 1rem;
-      display:grid; grid-template-columns:auto auto 1fr auto; gap:.7rem; align-items:start; color:#fff;
+      display:grid;
+      grid-template-columns:auto auto minmax(0,1fr) auto; /* important for wrapping */
+      gap:.7rem;
+      align-items:start;
+      color:#fff;
     }
-    .code {
-      display:inline-flex; align-items:center; justify-content:center;
-      min-width:72px; padding:.25rem .5rem;
-      background:#161b22; border:1px solid #30363d; border-radius:6px; font-weight:700; color:#fff;
-    }
-    .title { line-height:1.35; overflow-wrap:anywhere; }
-
+    .code { display:inline-flex; align-items:center; justify-content:center; min-width:72px; padding:.25rem .5rem; background:#161b22; border:1px solid #30363d; border-radius:6px; font-weight:700; color:#fff; }
+    .title { line-height:1.35; white-space:normal; word-break:break-word; }
     .panel { border-top:1px solid #30363d; padding:.85rem 1rem 1rem; }
     .panel-title { font-weight:700; color:#fff; margin-bottom:.35rem; }
 
     footer { text-align:center; padding:2rem; color:#8b949e; font-size:.9rem; }
-
-    /* Print */
-    @media print {
-      header, nav, .crumb, .intro, footer { display:none!important; }
-      body { background:#fff; color:#000; }
-      main { max-width:none; margin:0; padding:0; }
-      h2 { border:none; color:#000; margin:0 0 .5rem 0; }
-      .caret { display:none!important; }
-      .panel { display:block!important; border-top:1px solid #999; color:#000; }
-      details, .pico, .code { border-color:#aaa!important; background:#fff!important; }
-      .pico svg { stroke:#000; }
-    }
   </style>
 </head>
 <body>
@@ -409,7 +382,7 @@
             </div>
           </details>
 
-          <!-- Political Science (placing SOC-210 here to keep to your existing categories) -->
+          <!-- Political Science (+ Sociology grouped here as before) -->
           <details class="category">
             <summary class="category-summary">
               <span class="caret"></span>
