Update name in title and header to include Snodgrass

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>About — Jonathan Wayne</title>
+<title>About — Jonathan Wayne Snodgrass</title>
 <link rel="stylesheet" href="assets/styles.css?v=7"/>
 <script>function toggleNav(){document.querySelector('.nav-links').classList.toggle('open')}</script>
 <style>
@@ -19,7 +19,7 @@
 </style>
 </head><body>
 <header class="site-header"><div class="container nav">
-  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne</strong></a>
+  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne SNodgrass</strong></a>
   <nav class="row">
     <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">☰</button>
     <div class="nav-links">
@@ -34,7 +34,7 @@
 
 <main>
   <section class="container about-hero">
-    <span class="kicker">Hi, I’m Jonathan —</span>
+    <span class="kicker">Hi, I’m Jonathan Snodgrass—</span>
     <h1 class="m0">Designer–developer blending game worlds & secure systems.</h1>
     <p class="subtle mt2">I’m a student focused on simulation/game design and cybersecurity. I like building things that are both immersive and robust—clean level flows, readable UI, and defensible networks.</p>
   </section>
