Update contact email and modify project details

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div></header>
 
 <main>
-  <section class="container about-hero">
+  <section class=" container about-hero">
     <span class="kicker">Hi, I’m Jonathan Snodgrass—</span>
     <h1 class="m0">Designer–developer blending game worlds & secure systems.</h1>
     <p class="subtle mt2">I’m a student focused on simulation/game design and cybersecurity. I like building things that are both immersive and robust—clean level flows, readable UI, and defensible networks.</p>
@@ -59,9 +59,9 @@
       <div class="card mt3">
         <h2>Highlights</h2>
         <ul class="mt2">
-          <li>Built a reusable <strong>packet triage kit</strong> for HTTP/HTTPS enumeration labs.</li>
-          <li>Prototyped <strong>3D levels</strong> that emphasize player flow, sightlines, and lighting anchors.</li>
-          <li>Shipped a <strong>fast, static portfolio</strong> with consistent components and minimal JS.</li>
+          <li>Test</li>
+          <li>Prototyped <strong>Test/strong></li>
+          <li>Test<strong>Portfolio</strong></li>
         </ul>
       </div>
 
@@ -104,7 +104,7 @@
           <div>Location</div><div>Fayetteville, NC</div>
           <div>Focus</div><div>Game Design · Cybersecurity</div>
           <div>Currently</div><div>Coursework & personal projects</div>
-          <div>Email</div><div><a href="mailto:you@example.com">you@example.com</a></div>
+          <div>Email</div><div><a href="mailto:Jonathanb209@icloud.com">Jonathanb209@icloud.com</a></div>
         </div>
       </div>
       <div class="card mt3">
@@ -131,15 +131,15 @@
         </div>
       </article>
       <article class="card">
-        <h3>3D Level Blockout</h3>
-        <p class="subtle">Sightlines, pacing, and lighting anchors for exploration.</p>
+        <h3>Test</h3>
+        <p class="subtle">Test</p>
         <div class="row mt2">
           <a class="button" href="./projects/level-blockout.html">View details</a>
         </div>
       </article>
       <article class="card">
-        <h3>Static Portfolio</h3>
-        <p class="subtle">Clean components, accessible contrast, minimal JS.</p>
+        <h3>Portfolio</h3>
+        <p class="subtle">Test.</p>
         <div class="row mt2">
           <a class="button" href="./projects/static-portfolio.html">View details</a>
           <a class="button ghost" href="./downloads/static-portfolio.zip">Download</a>
