Fix HTML tags in Highlights section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <h2>Highlights</h2>
         <ul class="mt2">
           <li>Test</li>
-          <li>Prototyped <strong>Test/strong></li>
-          <li>Test<strong>Portfolio</strong></li>
+          <li>Prototyped <strong>Test</strong></li>
+          <li>Test <strong>Portfolio</strong></li>
         </ul>
       </div>
 
