--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 
   <section class="container section">
     <h2>Featured work</h2>
-    <p class="subtle">A couple of quick links—browse the rest on the Projects page.</p>
+    <p class="subtle">Test Test</p>
     <div class="grid grid-3 mt3">
       <article class="card">
-        <h3>HTTP/HTTPS Enumeration</h3>
-        <p class="subtle">Reusable filters and triage workflow for suspicious web traffic.</p>
+        <h3>Test./h3>
+        <p class="subtle">TEST</p>
         <div class="row mt2">
           <a class="button" href="./projects/http-enum.html">View details</a>
           <a class="button ghost" href="./downloads/http-enum.zip">Download</a>
